force-app/main/default/objects/Document_Audit__c/Document_Audit__c.object-meta.xml
<CustomObject>
    <label>Document Audit</label>
    <nameField>
        <label>Document Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>