force-app/main/default/objects/Document_Audit__c/fields/ActivityDetails__c.field-meta.xml
<CustomField>
    <fullName>ActivityDetails__c</fullName>
    <label>ActivityDetails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>