force-app/main/default/objects/Document_Audit__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>ActivityType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Created</fullName>
            </value>
            <value>
                <fullName>Signature Requested</fullName>
            </value>
            <value>
                <fullName>Document Signed</fullName>
            </value>
            <value>
                <fullName>Document Viewed</fullName>
            </value>
            <value>
                <fullName>Document Downloaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>